# THMHO_heatmap_generator

./: README.md  mkdocs.yml
.docker/: Dockerfile
.github/workflows/: build.yml  docker-image.yml  sync2upstream.yml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: architecture.md  getting-started.md  installationguide.md  usermanual.md
factory_sim/: CMakeLists.txt  package.xml
factory_sim/config/: costmap_params.yaml  costmap_params_sim.yaml
factory_sim/launch/: factory.launch  office.launch  robot_navigation.launch
factory_sim/maps/: lowres_map.pgm  lowres_map.yaml  map.pgm
factory_sim/models/T_section/: model.config  model.sdf
factory_sim/rviz/: costmap.rviz
factory_sim/scripts/: costmap_saver
factory_sim/src/: costmap_aggregator.cpp  costmap_gen.cpp  heatmap_generator.cpp
factory_sim/urdf/: lab.xacro  laser.plugins.xacro
factory_sim/world/: factory.world
